--- a/res/layout/newmessage.xml
+++ b/res/layout/newmessage.xml
@@ -6,94 +6,112 @@
     android:orientation="vertical"
     android:gravity="center">
 
+
+    <ListView
+            android:id="@+id/microblogSelector"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            >
+    </ListView>
+
+
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/editTo"
+                android:visibility="gone"
+                  android:id="@+id/content"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:orientation="vertical"
+                  >
+
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:enabled="false"
-            android:text="@string/To__All"/>
-        <Button
-                android:id="@+id/drafts"
+            android:layout_weight="0"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/editTo"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:enabled="false"
+                android:text="@string/To__All"/>
+            <Button
+                    android:id="@+id/drafts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Drafts"/>
+            <ImageButton
+                android:id="@+id/buttonSend"
+                android:layout_width="82sp"
+                android:layout_height="48sp"
+                android:scaleType="center"
+                android:src="@drawable/send36"/>
+            <ProgressBar
+                android:id="@+id/progressSend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Drafts"/>
-        <ImageButton
-            android:id="@+id/buttonSend"
-            android:layout_width="82sp"
-            android:layout_height="48sp"
-            android:scaleType="center"
-            android:src="@drawable/send36"/>
-        <ProgressBar
-            android:id="@+id/progressSend"
+                android:indeterminate="true"
+                android:indeterminateOnly="true"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <TextView
+                android:id="@+id/old_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#b6813d"
+                android:text="@string/JuickMicroblog"
+                android:background="#cfcea0"
+                android:singleLine="true"
+                android:textSize="18sp"
+                android:padding="3sp"
+                />
+
+        <EditText
+            android:id="@+id/editMessage"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="top"/>
+
+        <Button
+            android:id="@+id/buttonLocationHint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:indeterminateOnly="true"
-            android:visibility="gone"/>
-    </LinearLayout>
+            android:layout_weight="0"
+            android:visibility="gone"
+            android:textSize="16dip"
+            android:textColor="#FF000000"
+            android:background="@drawable/balloon"
+            android:paddingBottom="25dip"
+            android:paddingLeft="15dip"
+            android:paddingTop="10dip"
+            android:paddingRight="15dip"/>
 
-    <TextView
-            android:id="@+id/old_title"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#b6813d"
-            android:text="@string/JuickMicroblog"
-            android:background="#cfcea0"
-            android:singleLine="true"
-            android:textSize="18sp"
-            android:padding="3sp"
-            />
-
-    <EditText
-        android:id="@+id/editMessage"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="top"/>
-
-    <Button
-        android:id="@+id/buttonLocationHint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:visibility="gone"
-        android:textSize="16dip"
-        android:textColor="#FF000000"
-        android:background="@drawable/balloon"
-        android:paddingBottom="25dip"
-        android:paddingLeft="15dip"
-        android:paddingTop="10dip"
-        android:paddingRight="15dip"/>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0">
-        <ImageButton
-            android:id="@+id/buttonTags"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_menu_tags"/>
-        <ImageButton
-            android:id="@+id/buttonLocation"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_button_location"/>
-        <ImageButton
-            android:id="@+id/buttonAttachment"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_button_attachment"/>
+            android:layout_weight="0">
+            <ImageButton
+                android:id="@+id/buttonTags"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_menu_tags"/>
+            <ImageButton
+                android:id="@+id/buttonLocation"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_button_location"/>
+            <ImageButton
+                android:id="@+id/buttonAttachment"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_button_attachment"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
