--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -48,10 +48,16 @@
         <item>1.3</item>
         <item>1.5</item>
         <item>2.0</item>
+        <item>2.3</item>
         <item>2.5</item>
+        <item>2.8</item>
         <item>3.0</item>
+        <item>3.5</item>
         <item>4.0</item>
+        <item>4.5</item>
         <item>5.0</item>
+        <item>5.5</item>
+        <item>6.0</item>
     </string-array>
     <string-array name="imageLoadMode">
         <item>Do not load</item>
@@ -172,7 +178,7 @@
         <item>ja bolerplate-lib</item>
     </string-array>
     <string-array name="navigation_menu_start">
-        <item>start editing</item>
+        <item>show all / editing</item>
         <item>restore default order</item>
         <item>wider</item>
         <item>narrower</item>
