--- a/res/layout/newmessage.xml
+++ b/res/layout/newmessage.xml
@@ -73,6 +73,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textCursorDrawable="@null"
             android:gravity="top"/>
 
         <Button
