--- a/res/layout/explore.xml
+++ b/res/layout/explore.xml
@@ -3,6 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
+    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
+            >
+
+    </ScrollView>
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
